makefile tweak for uploading docs

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -56,6 +56,9 @@ html:
 	@echo
 	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
 
+zip:
+	(cd $(BUILDDIR)/html && zip -r docs.zip .)
+
 dirhtml:
 	$(SPHINXBUILD) -b dirhtml $(ALLSPHINXOPTS) $(BUILDDIR)/dirhtml
 	@echo
