--- a/.travis.yml
+++ b/.travis.yml
@@ -2,23 +2,22 @@ language: python
 python:
     - "2.7"
 
-before_install:
-    - if [ ${TRAVIS_PYTHON_VERSION:0:1} == "2" ]; then wget http://repo.continuum.io/miniconda/Miniconda-3.3.0-Linux-x86_64.sh -O miniconda.sh; else wget http://repo.continuum.io/miniconda/Miniconda3-3.3.0-Linux-x86_64.sh -O miniconda.sh; fi
-    - chmod +x miniconda.sh
-    - ./miniconda.sh -b
-    - export PATH=/home/travis/miniconda/bin:$PATH
-    - conda update --yes conda
-
-    # The next couple lines fix a crash with multiprocessing on Travis and are
-    # not specific to using Miniconda
-    - sudo rm -rf /dev/shm
-    - sudo ln -s /run/shm /dev/shm
-
-
 install:
-    - conda install --yes python=$TRAVIS_PYTHON_VERSION atlas numpy matplotlib
+    - sudo apt-get update -qq
+    - sudo apt-get install -qq python-dev python-pip
+    - sudo pip install conda
+    - sudo conda init
+    - conda create --yes --name test pytables numexpr pandas cython matplotlib pip nose pycurl numpy
+    - sudo rm -rf /dev/shm && sudo ln -Tsf /run/shm /dev/shm
+    - export PATH="$HOME/envs/test/bin:$PATH"
     - "pip install sphinx sphinx_bootstrap_theme"
     - "pip install ."
 
 script: bash sphinx-doctests
 
+virtualenv:
+    system_site_packages: true
+
+branches:
+    only:
+        - master
