--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,14 @@
-language: python
-python:
-    - "2.7"
+language: c
+env:
+    matrix:
+        - python=2.7
+        - python=3.3
 
 install:
-    - sudo apt-get update -qq
-    - sudo apt-get install -qq python-dev python-pip
-    - sudo pip install conda
-    - sudo conda init
-    - conda create --yes --name test pytables numexpr pandas cython matplotlib pip nose pycurl numpy
-    - sudo rm -rf /dev/shm && sudo ln -Tsf /run/shm /dev/shm
-    - export PATH="$HOME/envs/test/bin:$PATH"
-    - "pip install sphinx sphinx_bootstrap_theme"
-    - "pip install ."
+    - source .travis-install.sh
+    - "sudo rm -rf /dev/shm && sudo ln -Tsf /run/shm /dev/shm"
 
 script: bash sphinx-doctests
-
-virtualenv:
-    system_site_packages: true
 
 branches:
     only:
