--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,34 @@
-language: c
+language: python
+python:
+    - "2.7"
+    - "3.3"
+    - "3.4"
+
 env:
     matrix:
         - python=2.7
         - python=3.3
 
 install:
-    - source .travis-install.sh
+    - sudo apt-get update
+    - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+      wget http://repo.continuum.io/miniconda/Miniconda-3.4.2-Linux-x86_64.sh -O miniconda.sh;
+    else
+      wget http://repo.continuum.io/miniconda/Miniconda3-3.4.2-Linux-x86_64.sh -O miniconda.sh;
+    fi
+    - bash miniconda.sh -b -p $HOME/miniconda
+    - export PATH="$HOME/miniconda/bin:$PATH"
+    - hash -r
+    - conda config --set always_yes yes --set changeps1 no
+    - conda update -q conda
+
+    #Useful for debugging any issues with conda
+    - conda info -a
+
+    - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pip
+    - source activate test-environment
+    - pip install sphinx sphinx_bootstrap_theme
+    - pip install .
     - "sudo rm -rf /dev/shm && sudo ln -Tsf /run/shm /dev/shm"
 
 script: bash sphinx-doctests
