--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ install:
     #Useful for debugging any issues with conda
     - conda info -a
 
-    - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pip
+    - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pip numpy matplotlib
     - source activate test-environment
     - pip install sphinx sphinx_bootstrap_theme
     - pip install .
